--- a/Stud_app/Gemfile
+++ b/Stud_app/Gemfile
@@ -20,9 +20,13 @@ gem 'pry', :group => :developmen
 gem 'momentjs-rails', '>= 2.5.0'
 gem 'bootstrap3-datetimepicker-rails', '~> 3.0.0.2'
 gem 'email_veracity', '~> 0.6.0'
+gem 'database_cleaner', '~> 1.3.0'
+gem 'will_paginate', '~> 3.0'
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 gem 'haml', '~> 4.0.5'
+gem 'therubyracer'
+gem 'jquery-ui-rails'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
