--- a/Stud_app/Gemfile
+++ b/Stud_app/Gemfile
@@ -1,63 +1,23 @@
 source 'https://rubygems.org'
 
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.0.8'
+source 'https://rubygems.org'
 
-# Use sqlite3 as the database for Active Record
+gem 'rails', '4.1.4'
 gem 'sqlite3'
-
-# Use SCSS for stylesheets
-gem 'sass-rails', '~> 4.0.2'
-
-# Use Uglifier as compressor for JavaScript assets
-gem 'uglifier', '>= 1.3.0'
-
-# Use CoffeeScript for .js.coffee assets and views
-gem 'coffee-rails', '~> 4.0.0'
-gem 'pry', :group => :developmen
-# See https://github.com/sstephenson/execjs#readme for more supported runtimes
-# gem 'therubyracer', platforms: :ruby
-gem 'momentjs-rails', '>= 2.5.0'
-gem 'bootstrap3-datetimepicker-rails', '~> 3.0.0.2'
-gem 'email_veracity', '~> 0.6.0'
-gem 'database_cleaner', '~> 1.3.0'
-gem 'will_paginate', '~> 3.0'
-# Use jquery as the JavaScript library
 gem 'jquery-rails'
-gem 'haml', '~> 4.0.5'
-gem 'therubyracer'
-gem 'jquery-ui-rails'
-# Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-gem 'turbolinks'
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-gem 'jbuilder', '~> 1.2'
+gem 'jquery-datatables-rails'
+gem 'haml-rails'
+gem 'sorcery'
+gem 'pg'
 gem 'protected_attributes'
-group :doc do
-  # bundle exec rake doc:rails generates the API under doc/api.
-  gem 'sdoc', require: false
+gem 'will_paginate', '~> 3.0'
+gem 'sass', '~> 3.3.11'
+gem 'coffee-script', '~> 2.3.0'
+group :test do
+  gem 'capybara'
+  gem 'launchy'
 end
 
 group :development, :test do
-  gem 'rspec-rails'
-  gem 'factory_girl_rails'
+  gem 'faker'
 end
-
-group :test do
-	gem 'faker' 
-	gem 'capybara' 
-	gem 'guard-rspec' 
-	gem 'launchy' 
-end 
-gem 'bootstrap-sass', '2.3.2.0'
-gem 'sprockets', '2.11.0'
-# Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
-
-# Use unicorn as the app server
-# gem 'unicorn'
-
-# Use Capistrano for deployment
-# gem 'capistrano', group: :development
-
-# Use debugger
-# gem 'debugger', group: [:development, :test]
